# noode

./: .gitignore
.github/workflows/: ci-cd.yml
00_Projektmanagement/: Entscheidungspunkte.md  Projekthandbuch.md  Projektplan.md  Risikoanalyse.md
01_Anforderungen/: Lastenheft.md  Pflichtenheft.md
02_Systemarchitektur/: Systemübersicht.md
03_Entwicklung/: Dockerfile  README.md  build-appimage.sh  docker-compose.yml  pyproject.toml  start-dev.sh
03_Entwicklung/AppDir/: .DirIcon  AppRun  noode.desktop
03_Entwicklung/AppDir/usr/share/metainfo/: noode.appdata.xml
03_Entwicklung/docs/: BETA_STATUS.md  BETA_TEST_REPORT.md  SESSION_HANDOVER.md
03_Entwicklung/src/noode/: __init__.py  cli.py  desktop.py  nl_interface.py  project_generator.py
03_Entwicklung/src/noode/agents/: __init__.py  backend_agent.py  database_agent.py  frontend_agent.py  requirements_agent.py  research_agent.py  security_agent.py  testing_agent.py
03_Entwicklung/src/noode/api/: __init__.py  models.py  routes.py  server.py
03_Entwicklung/src/noode/cicd/: __init__.py  generator.py
03_Entwicklung/src/noode/core/: __init__.py  base_agent.py  config.py  knowledge_store.py  memory.py  orchestrator.py  project_manager.py  session_manager.py
03_Entwicklung/src/noode/knowledge/: __init__.py  embeddings.py  store.py
03_Entwicklung/src/noode/llm_providers/: __init__.py  models.py
03_Entwicklung/src/noode/plugins/: __init__.py  manager.py
03_Entwicklung/src/noode/plugins/examples/logger_agent/: plugin.py
03_Entwicklung/src/noode/protocols/: __init__.py  consensus.py  messages.py
03_Entwicklung/src/noode/utils/: __init__.py  logging.py  validation.py
03_Entwicklung/tauri-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
03_Entwicklung/tauri-ui/src/: App.tsx  main.tsx  styles.css
03_Entwicklung/tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
03_Entwicklung/tauri-ui/src-tauri/icons/: icon.icns
03_Entwicklung/tauri-ui/src-tauri/src/: main.rs
03_Entwicklung/tauri-ui/src/api/: client.ts  hooks.ts
03_Entwicklung/tauri-ui/src/components/: ComingSoon.tsx
03_Entwicklung/tauri-ui/src/pages/: Chat.tsx  Knowledge.tsx  ProjectDetail.tsx  Settings.tsx
03_Entwicklung/tauri-ui/src/types/: index.ts
03_Entwicklung/tests/: test_agents.py  test_core.py  test_sprint2.py  test_sprint3.py  test_sprint4.py
05_Qualitätssicherung/: QS-Plan.md
Konzepte/: 01_executive_summary.md  02_problem_statement.md  03_core_architecture.md  04_agent_system.md  05_research_knowledge.md  06_peer_review.md  07_security_principles.md  08_learning_systems.md  09_efficiency_management.md  10_user_experience.md  11_scalability_performance.md  12-13_failsafes_costs.md  14-15_legal_evolution.md  16-17_quality_roadmap_conclusion.md
