[project]
name = "noode"
version = "0.5.0"
description = "Autonomous AI Development Platform - Linux Mint AppImage"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Noode Team"}
]

dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "PyGObject>=3.48.0",
]

[project.scripts]
noode = "noode.cli:main"
noode-desktop = "noode.desktop:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noode"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
